<resources>
    <string name="app_name">Mezun Takip</string>
    <string name="log_in">GİRİŞ YAP</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="i_want_to_sign_up"><u>Henüz hesabınız yok mu?</u></string>
    <string name="student">ÖĞRENCİ</string>
    <string name="teacher">ÖĞRETMEN</string>
    <string name="sign_up">KAYIT OL</string>
    <string name="sim_ve_soyisim">İsim ve Soyisim</string>
    <string name="s_n_f">Sınıf</string>
    <string name="alan_se_imi_yap_n_z">Alan Seçiniz:</string>
    <string name="ders_se_imi_yap_n_z">Ders Seçiniz:</string>
    <string name="k_yap">ÇIKIŞ YAP</string>
    <string name="merhaba">Merhaba:</string>
    <string name="add_something">Add Something</string>
    <string name="mant_k">Mantık</string>
    <string name="k_meler">Kümeler</string>
    <string name="denklemler_ve_e_itsizlikler">Denklemler ve Eşitsizlikler</string>
    <string name="genler">Üçgenler</string>
    <string name="veri">Veri</string>
    <string name="al_man_n_dersini_ve_konusunu_belirle">Çalışmanın Dersini ve Konusunu Seç</string>
    <string name="matematik">Matematik</string>
    <string name="fizik">Fizik</string>
    <string name="ka_dakika_konu_al_t_n">Kaç Dakika Konu Çalıştın?</string>
    <string name="ka_tane_soru_zd_n">Kaç Tane Soru Çözdün?</string>
    <string name="ka_dakika_testi_zd_n">Kaç Dakika Test Çözdün?</string>
    <string name="konu">Konu:</string>
    <string name="b_tt">BİTTİ</string>
    <string name="saya">Sayaç</string>
    <string name="_00_00">00:00</string>
    <string name="a_k_tema">Açık Tema</string>
    <string name="t_m_renciler">Tüm Öğrenciler</string>
    <string name="al_malar">Çalışmalar</string>
    <string name="toplam_al_la_s_re">Toplam Çalışılan Süre</string>
    <string name="renci_ara">Öğrenci Ara:</string>
    <string name="tyt">TYT</string>
    <string name="ayt">AYT</string>
    <string name="t_r">Tür:</string>
    <string name="konu_se_iniz">Konu Seçiniz:</string>
    <string name="alt_konu_se_iniz">Alt Konu Seçiniz</string>
    <string name="al_ma_ara">Çalışma Ara:</string>
    <string name="geometri">Geometri</string>
    <string name="kimya">Kimya</string>
    <string name="biyoloji">Biyoloji</string>
    <string name="co_rafya">Coğrafya</string>
    <string name="tarih">Tarih</string>
    <string name="t_rk_e">Türkçe-Edebiyat</string>
    <string name="zaman_aral">Zaman Aralığı:</string>
    <string name="g_revlerim">Görevlerim</string>
    <string name="g_revler">Görevler</string>
    <string name="statusicon">statusIcon</string>
    <string name="g_rev_al_ma_s_resi">Görev Çalışma Süresi</string>
    <string name="g_rev_soru_say_s">Görev Soru Sayısı</string>
    <string name="biti_tarihi_se">Bitiş Tarihi Seç</string>
    <string name="g_revi_kaydet">Görevi Kaydet</string>
    <string name="kurum_kodu">Kurum Kodu</string>
    <string name="deneme">TYT/AYT Deneme</string>
    <string name="do_ru">Doğru</string>
    <string name="yanl">Yanlış</string>
    <string name="deneme_ad">Deneme Adı</string>
    <string name="deneme_tahlili">Deneme Tahlili</string>
    <string name="ko_luk_statistikleri">Koçluk İstatistikleri</string>
    <string name="grafik_olarak_g_ster">Grafik Olarak Göster</string>
    <string name="denemelerim">Denemelerim</string>
    <string name="tamamlanmayan_g_revler">Tamamlanmayan Görevler</string>
    <string name="tamamlanan_g_revler">Tamamlanan Görevler</string>
    <string name="t_m_g_revler">Tüm Görevler</string>
    <string name="g_rev_t_r">Görev Türü:</string>
    <string name="yanl_konular">Yanlış Konuları</string>
    <string name="felsefe">Felsefe</string>
    <string name="din">Din</string>
    <string name="deneme_kaydet">Deneme Kaydet</string>
    <string name="toplam_yanl_0">Toplam Yanlış: 0</string>
    <string name="deneme_tarihi">Deneme Tarihi:</string>
    <string name="denemeler">Denemeler</string>
    <string name="show">Show</string>
    <string name="default_notification_channel_id">212121</string>
    <string name="kalan_g_rev_miktar">Kalan Görev Miktarı:</string>
    <string name="deneme_t_rleri">Deneme Türleri</string>
    <string name="ifreni_mi_unuttun">Şifreni mi Unuttun?</string>
    <string name="kay_t_olan_ki_i">Kayıt Olan Kişi:</string>
    <string name="kullan_m_ko_ullar_n"><u>Kullanım Koşullarını</u></string>
    <string name="gizlilik_politikas_n"><u>Gizlilik Politikasını</u></string>
    <string name="erez_politikas_n"><u>Çerez Politikasını</u></string>
    <string name="kabul_etmi_olur">Kabul Etmiş Olur</string>
    <string name="di_er">Diğer</string>
    <string name="bu_haftaki_toplam_al_ma">Bu Haftaki Toplam Çalışma:</string>
    <string name="hedef_toplam_soru">Hedef Toplam Soru:</string>
    <string name="hedef_toplam_al_ma">Hedef Toplam Çalışma (dk):</string>
    <string name="haftal_k_hedefler">Haftalık Hedefler</string>
    <string name="save">Kaydet</string>
    <string name="ge_en_haftan_n_sonu_lar">Geçen Haftanın Sonuçları</string>
    <string name="ders_ara">Ders Ara:</string>
    <string name="grafik_halinde_g_rmek_in_herhangi_bir_derse_t_klay_n">(Grafik Halinde Görmek İçin Herhangi Bir Derse Tıklayın)</string>
    <string name="al_ma_zaman_aral">Çalışma Zaman Aralığı</string>
    <string name="konu_al_ma_grafi_i">Konu - Çalışma Grafiği</string>
    <string name="deneme_ekle">Deneme Ekle</string>
    <string name="deneme_t_r">Deneme Türü</string>
    <string name="deneme_s_n_f_d_zeyi">Deneme Sınıf Düzeyi</string>
    <string name="ko_retmenin">Koç Öğretmenin:</string>
    <string name="toplam">Toplam:</string>
    <string name="yi">İyi</string>
    <string name="orta">Orta</string>
    <string name="k_t">Kötü</string>
    <string name="recep_tayyip_erdo_an_anadolu_mam_hatip_lisesi">Recep Tayyip Erdoğan Anadolu İmam-Hatip Lisesi</string>
    <string name="problem">Problem</string>
    <string name="paragraf">Paragraf</string>
    <string name="yeni_sim_ve_soyisim">Yeni İsim ve Soyisim</string>
    <string name="sim">İsim:</string>
    <string name="hesab_sil">Hesabı Sil</string>
    <string name="alt_ba_l_klar">Alt Başlıklar</string>
    <string name="ortalama_toplam_net">Ortalama Toplam Net:</string>
    <string name="uygulamay_g_ncellemeniz_gerekmektedir">Uygulamayı Güncellemeniz Gerekmektedir.</string>
    <string name="g_ncellemek_in_t_klay_n">Güncellemek İçin Tıklayın</string>
    <string name="de_erlendirmeler">Değerlendirmeler</string>
    <string name="deneme_son_tarih">Bitiş Tarihi:</string>
    <string name="sonu_lar_g_r_nt_lemek_in_deneme_smine_t_klay_n">Sonuçları Görüntülemek İçin Deneme İsmine Tıklayın</string>

    <string name="sample_using_cropimageview">Sample using CropImageView</string>
    <string name="sample_of_customactivity">Sample of CustomActivity</string>
    <string name="sample_calling_cropimage">Sample calling CropImage</string>
    <string name="haftal_k_hedef_ekle_d_zenle">Haftalık Hedef Ekle/Düzenle</string>
    <string name="excel_tablosu_olu_tur">Excel Tablosu Oluştur</string>
    <string name="renci_s_ralamas">Öğrenci Sıralaması</string>
    <string name="furkan_karaketir_taraf_ndan_geli_tirildi">Furkan Karaketir Tarafından Geliştirildi</string>
    <string name="ki_i_ekle">Kişi Ekle</string>
    <string name="okul_ad">Okul Adı</string>
    <string name="b_l_m_ad">Bölüm Adı</string>
    <string name="mezuniyet_y_l">Mezuniyet Yılı</string>
    <string name="bulundu_u_ehir">Bulunduğu Şehir</string>
    <string name="telefon_numaras">Telefon (Başında "0" olmadan) </string>
    <string name="ek_not">Ek Not</string>
    <string name="kaydet">Kaydet</string>
    <string name="niversite_mezuniyet_durumu">Üniversite Mezuniyet Durumu</string>
    <string name="ki_ileri_ara">Kişileri Ara</string>
    <string name="ara">Ara</string>
    <string name="sme_g_re">İsme Göre</string>
    <string name="y_la_g_re">Yıla Göre</string>
    <string name="bulundu_u_le_g_re">Bulunduğu İle Göre</string>
    <string name="niversiteye_g_re">Üniversiteye Göre</string>
    <string name="b_l_me_g_re">Bölüme Göre</string>
    <string name="d_zenle">Düzenle</string>
    <string name="ki_i_d_zenle">Kişi Düzenle</string>
    <string name="sil">Sil</string>
    <string name="excel_e_aktar">Excel\'e Aktar</string>
</resources>