<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPersonActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textTitle"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ki_i_ekle"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:hint="@string/sim_ve_soyisim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:hint="@string/mezuniyet_y_l">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/graduationYearEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:hint="@string/bulundu_u_ehir">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:hint="@string/telefon_numaras">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:hint="@string/okul_ad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schoolEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:hint="@string/b_l_m_ad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.materialswitch.MaterialSwitch

            android:id="@+id/stateOfGraduation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/niversite_mezuniyet_durumu"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_margin="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="200dp"
            android:hint="@string/ek_not">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:inputType="textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveButton"
            android:text="@string/kaydet"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_margin="50dp"
            android:layout_width="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"/>

    </LinearLayout>

</ScrollView>