<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/updateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateText"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/uygulamay_g_ncellemeniz_gerekmektedir" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/updateText"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:text="@string/g_ncellemek_in_t_klay_n" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addPersonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:text="@string/ki_i_ekle"
        app:icon="@drawable/baseline_add_circle_outline_24"
        tools:ignore="RelativeOverlap">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/searchPersonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:text="@string/ki_ileri_ara"
        app:icon="@drawable/baseline_search_24">

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

</RelativeLayout>